<resources>
    <string name="app_name">Shake</string>

    <string name="accelerometer">Accelerometer</string>

    <string name="gyroscope">Gyroscope</string>

    <string name="magnetometer">Magnetometer</string>

    <string name="barometer">Barometer</string>

    <string name="server_address_label">Server:</string>
    <string name="port_label">Port:</string>
    <string name="name_label">Name:</string>
    <string name="default_server_address">cslectures.tongsucn.com</string>
    <string name="default_port">8123</string>
    <string name="default_name">MyName</string>
    <string name="connect_button">REGISTER</string>
    <string name="disconnect_button">UNREGISTER</string>
    <string name="shake_button">Shake</string>
</resources>
