<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rightLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAccelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:id="@+id/llAccelerometerCanvas"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvServerAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:text="@string/server_address_label" />


                <EditText
                    android:id="@+id/etServerAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@string/default_server_address" />

                <Button
                    android:id="@+id/btnConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/connect_button"
                    android:onClick="onClickConnect" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">


                <TextView
                    android:id="@+id/tvPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:text="@string/port_label" />


                <EditText
                    android:id="@+id/etPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/default_port" />

                <Button
                    android:id="@+id/btnDisconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/disconnect_button"
                    android:onClick="onClickDisconnect" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">


                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:text="@string/name_label" />


                <EditText
                    android:id="@+id/etName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="4"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/default_name" />

                <Button
                    android:id="@+id/btnShake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="5"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:text="@string/shake_button"
                    android:onClick="onClickShake" />

            </TableRow>

        </TableLayout>

</LinearLayout>